# Lab4

./: analisys_result.txt  analyzer.py  game.py  output.txt  pyproject.toml  statistics.json
